cabal-version:      2.4
name:               aoc2022
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: Advent of Code 2022 written in Haskell.

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Rasmus Leijon

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable aoc2022
    main-is:          Main.hs

    other-modules:
        Day1
        Day2
        Day3
        
    build-depends:    base, network, containers, split, matrix, vector, parsec, bytestring, pqueue
    hs-source-dirs:   app,src
    default-language: Haskell2010
